--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -34,6 +34,15 @@
       background-color: #fff;
     }
   }
+
+  &--green {
+    background-color: $color-primary;
+    color: #fff;
+
+    &::after {
+      background-color: $color-primary;
+    }
+  }
   
   &::after {
     content: "";
