--- a/css/style.css
+++ b/css/style.css
@@ -110,6 +110,9 @@ body {
 .u-margin-top-huge {
   margin-top: 10rem; }
 
+.bottom-heading-margin {
+  margin-bottom: 1.5rem; }
+
 .bg-video {
   position: absolute;
   top: 0;
@@ -321,7 +324,12 @@ body {
   transition: transform .3s; }
   .feature-box__icon {
     font-size: 6rem;
-    margin-bottom: .5rem; }
+    margin-bottom: 2.5rem;
+    display: inline-block;
+    background-image: linear-gradient(to right, #7ed56f, #28b485);
+    -webkit-background-clip: text;
+    background-clip: text;
+    color: transparent; }
   .feature-box:hover {
     transform: translateY(-1.5rem) scale(1.03); }
 
@@ -441,3 +449,17 @@ body {
 .section-stories {
   padding: 15rem 0;
   position: relative; }
+
+.section-book {
+  padding: 15rem 0;
+  background-image: linear-gradient(to right bottom, #7ed56f, #28b485); }
+
+.book {
+  background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 50%, transparent 50%), url(../img/nat-10.jpg);
+  background-size: 100%;
+  border-radius: 3px;
+  box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.2);
+  height: 50rem; }
+  .book__form {
+    width: 50%;
+    padding: 6rem; }
