--- a/sass/components/_feature-box.scss
+++ b/sass/components/_feature-box.scss
@@ -9,11 +9,12 @@
 
   &__icon {
     font-size: 6rem;
-    margin-bottom: .5rem;
-    // display: inline-block;
-    // background-image: linear-gradient(to right, $color-primary-light, $color-primary-dark);
-    // -webkit-background-clip: text;
-    // color: transparent;
+    margin-bottom: 2.5rem;
+    display: inline-block;
+    background-image: linear-gradient(to right, $color-primary-light, $color-primary-dark);
+    -webkit-background-clip: text;
+    background-clip: text;
+    color: transparent;
   }
 
   &:hover {
