--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,20 @@
+/*
+0 - 600px:         Phone (max-width media-queries)
+600 - 900px:       Tablet portrait (max-width media-queries)
+900 - 1200px:      Tablet landscape (max-width media-queries)
+[1200 - 1800px]:   Normal styles apply
+1800px + :         Big desktop (min-width media-queries)
+
+$breakpoint arguement choices:
+- phone
+- tab-port
+- tab-land
+- big-desktop
+
+ORDER: Base + typography > general layout + grid > page layout > components
+
+1em = 16px  (To clarify: "em", not "rem")
+*/
 @keyframes moveInLeft {
   0% {
     opacity: 0;
@@ -33,6 +50,15 @@
 
 html {
   font-size: 62.5%; }
+  @media only screen and (max-width: 75em) {
+    html {
+      font-size: 56.25%; } }
+  @media only screen and (max-width: 56.25em) {
+    html {
+      font-size: 50%; } }
+  @media only screen and (min-width: 112.5em) {
+    html {
+      font-size: 75%; } }
 
 body {
   box-sizing: border-box; }
