--- a/css/style.css
+++ b/css/style.css
@@ -561,7 +561,8 @@ body {
     padding: 3rem 5rem; }
   .popup__img {
     display: block;
-    width: 101%; }
+    width: 100%;
+    height: 280px; }
   .popup__text {
     font-size: 1.4rem;
     margin-bottom: 4rem;
