Added height to __img to get rid of white line under image

--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -38,7 +38,8 @@
 
   &__img {
     display: block;
-    width: 101%;
+    width: 100%;
+    height: 280px; // Removes white line under bottom image. 
   }
 
   &__text {
